# marjapussi-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  check_nan.py  justfile  pyproject.toml  rebuild_html.py  requirements.txt
docs/: ML_PROJECT_OVERVIEW.md
docs/ml/: PLAN_V2_IMPLEMENTATION_TASKLIST.md  README.md  SPEC_COUNTERFACTUAL_ADVANTAGE.md  SPEC_DEBUG_UI_PLAY_VS_AI.md  SPEC_NEUROSYMBOLIC_ARCHITECTURE.md  SPEC_OBSERVATION_PRIVACY.md  SPEC_PARALLEL_MODEL_ARCHITECTURE_V2.md  SPEC_PASSING_CURRICULUM.md  SPEC_REWARD_AND_SCORING.md  SPEC_TRAINING_LIFECYCLE.md  TEST_AND_VALIDATION_PLAN.md
ml/: README.md  benchmark_human_dataset.py  env.py  eval_fixed_deals.py  export_onnx.py  generate_fixed_deals.py  install_torch.py  model.py  model_factory.py  model_parallel.py  notify_run_complete_telegram.py  requirements.txt  self_play.py  start.sh  train.py  train_from_dataset.py  train_online.py  ui_server.py
ml/config/: model_parallel_v2.toml  train_online.toml
ml/dataset/: games.json
ml/eval/: fixed_deals_100.json  fixed_deals_custom_template.json  fixed_deals_random_100.json
ml/tests/: test_env_reward_basics.py  test_eval_fixed_deals.py  test_hidden_loss_constraints.py  test_loss_meta_blend.py  test_model_factory_v2.py  test_train_online_atomic_save.py  test_train_online_curriculum.py  test_train_online_episode_smoke.py  test_train_online_meta_signal.py  test_ui_server_smoke.py
ml/train/: loss.py  pool.py  reward.py  utils.py
ml/ui/: app.js  emoji_map.js  index.html  style.css
src/: game.rs  main.rs  tests.rs
src/game/: apply_action.rs  cards.rs  errors.rs  gameevent.rs  gameinfo.rs  gamestate.rs  legal_actions.rs  parse.rs  player.rs  points.rs  series.rs
src/ml/: inference.rs  mod.rs  observation.rs  pass_selection.rs  proto.rs  search.rs  sim.rs
src/ml/inference/: README.md  engine.rs  mod.rs  rules.rs  terms.rs
src/tests/: cards.rs  game.rs  parse.rs
