[package]
name = "marjapussi"
version = "0.1.0"
license = "GPL-3"
readme = "README.md"
description = "Implements the Finnish card game Marapussi."
authors = ["Samuel Leßmann <samuel@lessmann.dev>"]
repository = "https://github.com/SamuelLess/marjapussi-rs"
edition = "2021"

[[bin]]
name = "interactive"
path = "src/bin/interactive.rs"
bench = false

[[bin]]
name = "parse"
path = "src/bin/parse_legacy.rs"
bench = false

[dependencies]
itertools = "0.13.0"
strum = "0.26.3"
strum_macros = "0.26.4"
chrono = "0.4"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.3.0"
clap = "4.5.9"
indicatif = "0.17.8"
