[package]
name = "marjapussi"
version = "0.1.3"
license = "GPL-3.0"
readme = "README.md"
description = "Implements the Finnish card game Marjapussi."
authors = ["Samuel Leßmann <samuel@lessmann.dev>"]
repository = "https://github.com/SamuelLess/marjapussi-rs"
edition = "2021"

[[bin]]
name = "interactive"
path = "src/bin/interactive.rs"
bench = false

[[bin]]
name = "parse"
path = "src/bin/parse_legacy.rs"
bench = false

[[bin]]
name = "ml_server"
path = "src/bin/ml_server.rs"
bench = false

[[bin]]
name = "ml_generate"
path = "src/bin/ml_generate.rs"
bench = false

[dependencies]
itertools = "0.14.0"
strum = "0.27.1"
strum_macros = "0.27.1"
chrono = "0.4.40"
rand = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.12.0"
clap = "4.5.32"
indicatif = "0.17.11"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[profile.dev.package."*"]
opt-level = 2
