[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marjapussi-ml-tools"
version = "0.1.0"
description = "Python tooling for Marjapussi ML training and UI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "aiohttp",
    "websockets",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
packages = []
py-modules = []

[tool.pytest.ini_options]
testpaths = ["ml/tests"]
