[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marjapussi-ml-tools"
version = "0.1.0"
description = "Python tooling for Marjapussi ML training and UI."
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "numpy",
    "aiohttp",
    "websockets",
    "telethon>=1.36",
    "tomli>=2.0.1; python_version < '3.11'",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
eval = [
    "torch",
]

[tool.setuptools]
packages = []
py-modules = []

[tool.pytest.ini_options]
testpaths = ["ml/tests"]
